fixede kurvens baggrund.

--- a/app/src/main/res/layout/kurv_frag.xml
+++ b/app/src/main/res/layout/kurv_frag.xml
@@ -8,8 +8,9 @@
     tools:context=".aktivitys.MainActivity">
 
     <android.support.v7.widget.RecyclerView
+        android:background="#F342"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="match_parent"
         android:scrollbars="vertical"
         android:id="@+id/kurv_listview" />
 
