--- a/app/src/main/res/layout/signup_frag.xml
+++ b/app/src/main/res/layout/signup_frag.xml
@@ -32,20 +32,20 @@
     <Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/loginButton"
+        android:id="@+id/signUpButton"
         android:layout_below="@+id/passwordField"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="49dp"
-        android:text="@string/login_button_label" />
+        android:text="@string/sign_up_button_label" />
 
-    <TextView
+    <EditText
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/signUpText"
-        android:layout_marginTop="48dp"
-        android:onClick="onClick"
-        android:clickable="true"
-        android:text="@string/sign_up_click"
-        android:layout_below="@+id/loginButton"
-        android:layout_centerHorizontal="true" />
+        android:inputType="textPassword"
+        android:ems="10"
+        android:layout_below="@+id/passwordField"
+        android:layout_alignEnd="@+id/passwordField"
+        android:id="@+id/passwordFieldCheck"
+        android:hint="@string/password_hint" />
+
 </RelativeLayout>
