--- a/app/src/main/res/layout/login_frag.xml
+++ b/app/src/main/res/layout/login_frag.xml
@@ -48,4 +48,14 @@
         android:text="@string/sign_up_click"
         android:layout_below="@+id/loginButton"
         android:layout_centerHorizontal="true" />
+
+    <ProgressBar
+        style="?android:attr/progressBarStyleLarge"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_above="@+id/signUpText"
+        android:layout_alignStart="@+id/loginButton"
+        android:layout_marginBottom="29dp"
+        android:id="@+id/progBar_logIn" />
+
 </RelativeLayout>
