alle knapperne i menu virker

--- a/app/src/main/res/menu/tool_items_menu.xml
+++ b/app/src/main/res/menu/tool_items_menu.xml
@@ -44,9 +44,13 @@
         android:orderInCategory="6"
         android:title="log in"
         app:showAsAction="ifRoom">
-
-
     </item>
+
+    <item
+        android:id="@+id/menu_qrTest"
+        android:orderInCategory="6"
+        android:title="qr Koder"
+        app:showAsAction="ifRoom"></item>
 
 
 </menu>
