--- a/app/src/main/res/menu/tool_items_menu.xml
+++ b/app/src/main/res/menu/tool_items_menu.xml
@@ -48,8 +48,13 @@
 
     <item
         android:id="@+id/menu_qrTest"
-        android:orderInCategory="6"
+        android:orderInCategory="7"
         android:title="qr Koder"
+        app:showAsAction="ifRoom"></item>
+    <item
+        android:id="@+id/menu_qrCamera"
+        android:orderInCategory="8"
+        android:title="qr Camera"
         app:showAsAction="ifRoom"></item>
 
 
