--- a/app/src/main/res/layout/kurvshowhide_frag.xml
+++ b/app/src/main/res/layout/kurvshowhide_frag.xml
@@ -46,7 +46,7 @@
                 android:layout_width="45dp"
                 android:layout_height="50dp"
                 android:layout_gravity="right"
-                android:id="@+id/imageView4"
+                android:id="@+id/imgBtn_Cart_Checkout"
                 app:srcCompat="@drawable/kurv_icon" />
         </LinearLayout>
     </LinearLayout>
