--- a/app/src/main/res/layout/food_menu_frag.xml
+++ b/app/src/main/res/layout/food_menu_frag.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
@@ -8,6 +9,9 @@
     <android.support.design.widget.TabLayout
         android:layout_width="match_parent"
         android:id="@+id/tabLayout"
+        app:tabIndicatorHeight="5dp"
+        app:tabIndicatorColor="@color/common_google_signin_btn_text_dark"
+
         android:layout_height="wrap_content">
 
     </android.support.design.widget.TabLayout>
@@ -16,7 +20,7 @@
         android:layout_width="match_parent"
         android:layout_height="0px"
         android:layout_weight="1"
-        android:background="#f12342"
+        android:background="@color/com_facebook_button_background_color_disabled"
         android:id="@+id/menuTabContent">
 
     </android.support.v4.view.ViewPager>
