--- a/app/src/main/res/layout/login_frag.xml
+++ b/app/src/main/res/layout/login_frag.xml
@@ -1,5 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    >
+<RelativeLayout
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:paddingBottom="@dimen/activity_vertical_margin"
@@ -59,3 +63,4 @@
         android:id="@+id/progBar_logIn" />
 
 </RelativeLayout>
+</ScrollView>
