--- a/app/src/main/res/layout/tabcontent_recyclerlist.xml
+++ b/app/src/main/res/layout/tabcontent_recyclerlist.xml
@@ -5,8 +5,8 @@
     android:layout_height="match_parent"
     android:weightSum="1">
 
-    <ListView
-        android:id="@+id/menu_ViewPagerContent"
+    <android.support.v7.widget.RecyclerView
+        android:id="@+id/recyclerview_tabcontent"
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
 </LinearLayout>
