--- a/app/src/main/res/layout/kurv_frag.xml
+++ b/app/src/main/res/layout/kurv_frag.xml
@@ -8,14 +8,46 @@
     android:background="@color/authui_colorPrimary"
     tools:context=".aktivitys.MainActivity">
 
-    <FrameLayout
+    <LinearLayout
         android:layout_width="match_parent"
         android:paddingBottom="2dp"
         android:paddingTop="2dp"
+        android:orientation="vertical"
         android:paddingLeft="1dp"
         android:paddingRight="1dp"
         android:layout_height="match_parent"
-        android:background="#FF3412">
+        android:background="@color/authui_colorPrimaryDark">
+        <FrameLayout
+            android:layout_width="match_parent"
+            android:layout_height="42dp"
+            android:background="#F23423">
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="40dp"
+            android:background="@color/authui_colorPrimaryDark"
+            android:orientation="horizontal">
+
+            <Button
+                android:layout_width="100dp"
+                android:gravity="right"
+                android:text="Check out"
+                android:id="@+id/btn_checkout"
+                android:layout_height="40dp"
+                android:layout_alignParentBottom="true"
+                android:layout_alignParentEnd="true" />
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:text="Din indkøbskurv er tom"
+                android:textAlignment="center"
+                android:gravity="center"
+                android:id="@+id/txt_cart_total"
+                android:layout_toLeftOf="@id/btn_checkout" />
+
+
+
+        </RelativeLayout>
+        </FrameLayout>
 
     <android.support.v7.widget.RecyclerView
         android:layout_width="match_parent"
@@ -25,6 +57,6 @@
         android:id="@+id/kurv_listview" />
 
 
-    </FrameLayout>
+    </LinearLayout>
 
 </LinearLayout>
