--- a/app/src/main/res/layout/hovedakt_akt.xml
+++ b/app/src/main/res/layout/hovedakt_akt.xml
@@ -4,18 +4,13 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:background="#000000"
     android:id="@+id/mainLinear"
     android:orientation="vertical"
-    android:paddingBottom="0dp"
-    android:paddingLeft="1dp"
-    android:paddingRight="1dp"
-    android:paddingTop="1dp"
     tools:context="mau.resturantapp.aktivitys.MainActivity">
 
 
     <FrameLayout
-        android:background="@color/colorPrimaryDark"
+        android:background="@color/colorPrimary"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
@@ -23,7 +18,7 @@
 
         <android.support.design.widget.CoordinatorLayout
             android:layout_width="match_parent"
-            android:layout_marginBottom="55dp"
+            android:layout_marginBottom="56dp"
             android:layout_height="match_parent"
             android:clickable="true"
             android:fitsSystemWindows="true"
@@ -55,7 +50,9 @@
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="15dp"
                 android:src="@drawable/kurv_icon"
+                android:tint="@color/colorWhite"
                 android:id="@+id/floatActBtn_cartContent"
+                app:backgroundTint="@color/colorPrimaryDark"
                 app:layout_anchor="@id/cartContentShowHide_frag"
                 app:layout_anchorGravity="clip_horizontal"/>
 
