--- a/app/src/main/res/layout/kurv_frag.xml
+++ b/app/src/main/res/layout/kurv_frag.xml
@@ -5,7 +5,6 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:weightSum="1"
-    android:background="@color/authui_colorPrimary"
     tools:context=".aktivitys.MainActivity">
 
     <LinearLayout
@@ -16,45 +15,61 @@
         android:paddingLeft="1dp"
         android:paddingRight="1dp"
         android:layout_height="match_parent"
-        android:background="@color/authui_colorPrimaryDark">
+        android:background="@color/colorPrimaryDark">
         <FrameLayout
             android:layout_width="match_parent"
             android:layout_height="42dp"
-            android:background="#F23423">
-        <RelativeLayout
-            android:layout_width="match_parent"
-            android:layout_height="40dp"
-            android:background="@color/authui_colorPrimaryDark"
-            android:orientation="horizontal">
+            android:background="@color/colorPrimaryDark">
 
-            <Button
-                android:layout_width="100dp"
-                android:gravity="right"
-                android:text="Check out"
-                android:id="@+id/btn_checkout"
+            <RelativeLayout
+                android:layout_width="match_parent"
                 android:layout_height="40dp"
-                android:layout_alignParentBottom="true"
-                android:layout_alignParentEnd="true" />
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="match_parent"
-                android:text="Din indkøbskurv er tom"
-                android:textAlignment="center"
-                android:gravity="center"
-                android:id="@+id/txt_cart_total"
-                android:layout_toLeftOf="@id/btn_checkout" />
+                android:layout_margin="1dp"
+                android:background="@color/colorWhite"
+                android:orientation="horizontal">
+                <FrameLayout
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:id="@+id/btnFrame"
+                    android:layout_alignParentEnd="true">
+                <Button
+                    android:layout_width="wrap_content"
+                    android:textAlignment="center"
+                    android:text="CheckOut"
+                    android:layout_margin="2dp"
+                    android:background="@color/colorPrimaryDark"
+                    android:id="@+id/btn_checkout"
+                    android:clickable="true"
+                    android:layout_height="match_parent"
+                    android:textColor="@color/primaryTextRed"
+                     />
+                </FrameLayout>
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="match_parent"
+                    android:text="Din indkøbskurv er tom"
+                    android:textAlignment="center"
+                    android:gravity="center"
+                    android:textSize="16dp"
+                    android:layout_marginRight="5dp"
+                    android:textColor="@color/primaryTextRed"
+                    android:id="@+id/txt_cart_total"
+                    android:layout_toLeftOf="@id/btnFrame" />
 
 
 
-        </RelativeLayout>
+            </RelativeLayout>
         </FrameLayout>
 
-    <android.support.v7.widget.RecyclerView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:scrollbars="vertical"
-        android:background="@color/authui_colorPrimary"
-        android:id="@+id/kurv_listview" />
+        <android.support.v7.widget.RecyclerView
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:scrollbars="vertical"
+            android:layout_marginTop="2dp"
+            android:background="@color/colorWhite"
+            android:id="@+id/kurv_listview" >
+
+        </android.support.v7.widget.RecyclerView>
 
 
     </LinearLayout>
