--- a/app/src/main/res/layout/maintoolbar_toolbar.xml
+++ b/app/src/main/res/layout/maintoolbar_toolbar.xml
@@ -1,13 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.v7.widget.Toolbar xmlns:android="http://schemas.android.com/apk/res/android"
+
+
+<android.support.v7.widget.Toolbar
+
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     app:contentInsetLeft="0dp"
     app:contentInsetStart="0dp"
+    android:elevation="1dp"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
+    android:background="@color/colorPrimaryDark"
     android:layout_gravity="bottom"
-    android:background="?attr/colorPrimaryDark"
-    android:theme="?attr/actionBarTheme"
+    app:theme="@style/Theme.AppCompat.DayNight"
+    app:popupTheme="@style/Theme.AppCompat.DayNight"
     android:minHeight="?attr/actionBarSize"
     android:id="@+id/mainToolbar">
 
