--- a/app/src/main/res/layout/menu_item_list.xml
+++ b/app/src/main/res/layout/menu_item_list.xml
@@ -3,16 +3,23 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_marginLeft="15dp"
-    android:layout_marginRight="15dp"
+    android:layout_marginLeft="4dp"
+    android:layout_marginRight="4dp"
     android:layout_marginTop="1dp"
-    android:layout_marginBottom="1dp">
+    android:background="@color/colorPrimaryDark"
+    android:layout_marginBottom="2dp">
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_margin="1dp">
 
     <ImageView
         android:layout_width="50dp"
         android:layout_height="50dp"
         app:srcCompat="@drawable/ic_action_name"
         android:layout_alignParentTop="true"
+        android:background="@color/colorPrimary"
+        android:tint="@color/colorPrimaryDark"
         android:layout_alignParentStart="true"
         android:id="@+id/icon_menu_itemIcon" />
 
@@ -20,9 +27,11 @@
     <ImageButton
         android:layout_width="50dp"
         android:layout_height="50dp"
-        android:background="?android:attr/windowBackground"
+
+        android:background="@color/colorPrimary"
         app:srcCompat="@drawable/ic_check_black_24dp"
         android:layout_alignParentTop="true"
+        android:tint="@color/colorPrimaryDark"
         android:layout_alignParentRight="true"
         android:id="@+id/imgBtn_menu_removeItem" />
 
@@ -32,7 +41,9 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentTop="true"
+        android:textColor="@color/primaryTextRed"
         android:id="@+id/txt_menu_mainItemtext"
+        android:background="@color/colorPrimary"
         android:layout_above="@+id/txt_menu_extraItemText"
         android:layout_toEndOf="@+id/icon_menu_itemIcon"
         android:layout_toStartOf="@id/imgBtn_menu_removeItem" />
@@ -41,10 +52,12 @@
         android:text=""
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:background="@color/colorPrimary"
+        android:textColor="@color/primaryTextRed"
         android:layout_alignBottom="@+id/icon_menu_itemIcon"
         android:layout_toEndOf="@+id/icon_menu_itemIcon"
         android:layout_toStartOf="@id/imgBtn_menu_removeItem"
         android:id="@+id/txt_menu_extraItemText" />
-
+    </RelativeLayout>
 
 </RelativeLayout>
