--- a/app/src/main/res/layout/tabcontent_recyclerlist.xml
+++ b/app/src/main/res/layout/tabcontent_recyclerlist.xml
@@ -5,6 +5,12 @@
     android:layout_height="match_parent"
     android:weightSum="1">
 
+    <Button
+        android:text="Button"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/button2" />
+
     <android.support.v7.widget.RecyclerView
         android:id="@+id/recyclerview_tabcontent"
         android:layout_width="match_parent"
