--- a/app/src/main/res/layout/kurv_list.xml
+++ b/app/src/main/res/layout/kurv_list.xml
@@ -8,8 +8,9 @@
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@color/primaryTextRed"
+        android:background="@color/colorPrimary"
         android:layout_alignParentTop="true"
+        android:id="@+id/relativLayout_cartContent"
         android:layout_alignParentStart="true">
 
     <ImageButton
@@ -25,14 +26,14 @@
 
 
         <TextView
-            android:text="TextView ----------------------------------------------------------"
+            android:text="TextView "
             android:textSize="15dp"
             android:textStyle="italic"
             android:textAlignment="textStart"
             android:layout_width="wrap_content"
             android:layout_height="30dp"
             android:background="@color/colorPrimary"
-            android:textColor="@color/primaryTextRed"
+            android:textColor="@color/colorForeGround"
             android:id="@+id/txt_cartContent_mainItemtext"
             android:layout_alignTop="@+id/imgBtn_cartContent_removeItem"
             android:layout_alignParentStart="true"
@@ -42,7 +43,7 @@
             android:layout_width="wrap_content"
             android:layout_height="30dp"
             android:text="5DKK"
-            android:textColor="@color/primaryTextRed"
+            android:textColor="@color/colorForeGround"
             android:background="@color/colorPrimary"
             android:textAlignment="center"
             android:id="@+id/txt_cart_priceText"
