--- a/app/src/main/res/layout/sidemenu_header.xml
+++ b/app/src/main/res/layout/sidemenu_header.xml
@@ -6,6 +6,8 @@
     <ImageView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:tint="@color/colorSecondaryDark"
+        android:background="@color/colorPrimaryDark"
         android:src="@drawable/ic_action_name"
         android:scaleType="centerCrop"/>
 </LinearLayout>
