--- a/app/src/main/res/layout/kurv_list.xml
+++ b/app/src/main/res/layout/kurv_list.xml
@@ -16,12 +16,21 @@
     <ImageButton
         android:layout_width="30dp"
         android:layout_height="30dp"
-        app:srcCompat="@drawable/remove_kurv_icon"
+        app:srcCompat="@drawable/ic_action_remove"
         android:layout_alignParentTop="true"
+        android:tint="@color/colorOrange"
         android:layout_marginBottom="1dp"
-        android:background="@color/colorOrange"
         android:layout_alignParentRight="true"
-        android:id="@+id/imgBtn_cartContent_removeItem" />
+        android:id="@+id/imgBtn_cartContent_removeItem">
+        </ImageButton>
+        <ImageView
+            android:layout_width="30dp"
+            android:layout_height="30dp"
+            android:src="@drawable/remove_kurv_icon"
+            android:layout_alignParentTop="true"
+            android:id="@+id/remove_minus_icon"
+            android:layout_alignParentRight="true"
+            />
 
 
 
